"Updated Angular configuration to include service worker, added routing and components, and modified HTML files"

--- a/fincords/src/app/app.component.html
+++ b/fincords/src/app/app.component.html
@@ -1,31 +1,1 @@
-<!-- The card that triggers the modal -->
-<div class="card" data-toggle="modal" data-target="#addConsumerModal">
-    Add consumer
-</div>
-
-<!-- The modal -->
-<div class="modal fade" id="addConsumerModal" tabindex="-1" role="dialog" aria-labelledby="addConsumerModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addConsumerModalLabel">Add Consumer</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="consumerName">Consumer Name</label>
-                        <input type="text" class="form-control" id="consumerName" placeholder="Enter consumer name">
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Add Consumer</button>
-            </div>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
