"Added CSS styles for footer and body, and updated landing component HTML structure"

--- a/fincords/src/app/modules/landing/landing.component.html
+++ b/fincords/src/app/modules/landing/landing.component.html
@@ -1,1 +1,12 @@
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<header>
+
+</header>
+
+<body>
+
+</body>
+
+<footer class="footer">
+    <p>&copy; 2024 shamilmuhyin. All rights reserved</p>
+</footer>
