--- a/fincords/src/app/modules/landing/landing.component.css
+++ b/fincords/src/app/modules/landing/landing.component.css
@@ -1,6 +1,80 @@
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    border-bottom: 4px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+    position: sticky;
+
+    .logo {
+        font-size: 32px;
+        font-weight: 600;
+        padding-left: 4rem;
+    }
+
+    nav {
+        padding-right: 4rem;
+
+        ul {
+            display: flex;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            margin-right: 1rem;
+            margin-left: 1rem;
+
+            a {
+                display: block;
+                color: inherit;
+                text-align: center;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+body {
+    .row-1 {
+        background-color: #F6F6F6;
+    }
+
+    .body-text {
+        padding: 4rem 5rem 1rem 4rem;
+        font-size: 48px;
+        font-weight: 500;
+        font-family: 'Kanit', sans-serif;
+    }
+
+    .body-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #f6f6f6;
+    }
+
+    .button {
+        padding: 0.4rem 0.8rem;
+        background-color: #FFFFFF;
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 8px;
+        border-color: #2236571a;
+        margin-left: 4rem;
+        margin-bottom: 4rem;
+    }
+
+    .row-2 {
+        background-color: #FFFFFF;
+    }
+}
+
 footer {
     color: #FCFCFC;
     text-align: center;
     background-color: #2E2F33;
-    padding: 2rem;
+    padding: 1rem 2rem;
 }
