--- a/fincords/src/app/modules/landing/landing.component.html
+++ b/fincords/src/app/modules/landing/landing.component.html
@@ -1,10 +1,34 @@
 <!-- <app-login></app-login> -->
 <header>
-
+    <div class="logo">
+        fincords
+    </div>
+    <nav>
+        <ul>
+            <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+            <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+            <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+        </ul>
+    </nav>
 </header>
 
 <body>
-
+    <div class="row row-1">
+        <div class="col-md-6">
+            <div class="body-text">
+                Track your business transaction <br> in no time.
+            </div>
+            <div class="begin-btn">
+                <button class="button">Get started</button>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="body-img"></div>
+        </div>
+    </div>
+    <div class="row row-2">
+        fghjhgfdsa
+    </div>
 </body>
 
 <footer class="footer">
