"Update landing component CSS and HTML, and global styles"

--- a/fincords/src/app/modules/landing/landing.component.html
+++ b/fincords/src/app/modules/landing/landing.component.html
@@ -5,9 +5,7 @@
     </div>
     <nav>
         <ul>
-            <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-            <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-            <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+            <li><button type="button" class="button" routerLink="/" routerLinkActive="active">Get started</button></li>
         </ul>
     </nav>
 </header>
@@ -27,7 +25,8 @@
         </div>
     </div>
     <div class="row row-2">
-        fghjhgfdsa
+        <h2>Miss records no more, keep them aligned.</h2>
+        <img id="record" src="assets/images/records.jpg">
     </div>
 </body>
 
