--- a/fincords/src/app/modules/landing/landing.component.css
+++ b/fincords/src/app/modules/landing/landing.component.css
@@ -2,9 +2,10 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 0.6rem 1rem;
     border-bottom: 4px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+    /* box-shadow: 0 1px 3px rgba(0, 0, 0, .2); */
+    box-shadow: 0 24px 24px -12px #16223b08;
     position: sticky;
 
     .logo {
@@ -27,11 +28,15 @@ header {
             margin-right: 1rem;
             margin-left: 1rem;
 
-            a {
-                display: block;
-                color: inherit;
+            .button {
+                border-style: solid;
+                border-width: 1px;
+                border-radius: 4px;
+                padding: 0.4rem 1rem;
                 text-align: center;
-                text-decoration: none;
+                border-style: none;
+                background-color: #2236571a;
+                border-color: #ffffff;
             }
         }
     }
@@ -53,7 +58,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #f6f6f6;
+        background-color: #e1e0e0;
     }
 
     .button {
@@ -61,14 +66,22 @@ body {
         background-color: #FFFFFF;
         border-style: solid;
         border-width: 1px;
-        border-radius: 8px;
+        border-radius: 4px;
         border-color: #2236571a;
         margin-left: 4rem;
         margin-bottom: 4rem;
     }
 
     .row-2 {
+        display: flex;
+        text-align: center;
+        padding: 2rem 4rem;
         background-color: #FFFFFF;
+
+        #record {
+            width: 400px;
+            height: auto;
+        }
     }
 }
 
