--- a/fincords/src/app/modules/landing/landing.component.html
+++ b/fincords/src/app/modules/landing/landing.component.html
@@ -5,7 +5,7 @@
     </div>
     <nav>
         <ul>
-            <li><button type="button" class="button" routerLink="/" routerLinkActive="active">Get started</button></li>
+            <li><button type="button" class="button" routerLink="/" routerLinkActive="active">Login</button></li>
         </ul>
     </nav>
 </header>
